--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,14 @@
 # Maven
+- task: CmdLine@2
+  inputs:
+    script: |
+      git clone https://github.com/Enchoz/first-contributions.git
+      git config --global user.name "Enchoz"
+      git checkout master
+      git add .
+      git commit -m "abc"
+       git push https://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@github.com/Enchoz/first-contributions.git
+    failOnStderr: true
 # Build your Java project and run tests with Apache Maven.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
