Modify trigger task in azure-pipelines.yml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,3 +30,13 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: CmdLine@2
+  inputs:
+    script: |
+      git clone https://github.com/Enchoz/first-contributions.git
+      git config --global user.name "Enchoz"
+      git checkout master
+      git add .
+      git commit -m "abc"
+       git push https://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@github.com/Enchoz/first-contributions.git
+    failOnStderr: true
